--- a/src/main/resources/assets/what-was-that/lang/en_us.json
+++ b/src/main/resources/assets/what-was-that/lang/en_us.json
@@ -1,3 +1,33 @@
 {
-  "what-was-that.midnightconfig.text1": "Test comment"
+  "modmenu.descriptionTranslation.what-was-that": "Is there something there... Or am I just crazy...",
+  "modmenu.summaryTranslation.what-was-that": "Am I Crazy???",
+  "what-was-that.advancements.break_jukebox.desc": "I wonder if an iron sword would fit in the slot?",
+  "what-was-that.advancements.break_jukebox.title": "Destructive Curiosity",
+  "what-was-that.advancements.root.desc": "What is it? This unsettling feeling... Something must here with us...",
+  "what-was-that.advancements.root.title": "Something is wrong...",
+  "what-was-that.midnightconfig.": "",
+  "what-was-that.midnightconfig..tooltip": "",
+  "what-was-that.midnightconfig.angerEnd": "In End Anger",
+  "what-was-that.midnightconfig.angerEnd.tooltip": "How much more likely The Entity is to take an action or lock onto people who have visited the end.",
+  "what-was-that.midnightconfig.angerInEnd": "End Travel Anger",
+  "what-was-that.midnightconfig.angerInEnd.tooltip": "How much more likely The Entity is to take an action or lock onto people who are in the end.",
+  "what-was-that.midnightconfig.angerInNether": "In Nether Anger",
+  "what-was-that.midnightconfig.angerInNether.tooltip": "How much more likely The Entity is to take an action or lock onto people who are in the nether.",
+  "what-was-that.midnightconfig.angerNether": "Nether Travel Anger",
+  "what-was-that.midnightconfig.angerNether.tooltip": "How much more likely The Entity is to take an action or lock onto people who have visited the nether.",
+  "what-was-that.midnightconfig.increasePerPlayer": "Increase Per Player",
+  "what-was-that.midnightconfig.increasePerPlayer.tooltip": "How much to scale up the chance of picking a player when there are more players online.",
+  "what-was-that.midnightconfig.textChances": "Probability",
+  "what-was-that.midnightconfig.textChancesDesc": "All values are 1 in a NUMBER.",
+  "what-was-that.midnightconfig.textScalars": "Modifiers",
+  "what-was-that.midnightconfig.textTicks": "Ticks",
+  "what-was-that.midnightconfig.ticksMaxBother": "Maximum Bother Ticks",
+  "what-was-that.midnightconfig.ticksMaxBother.tooltip": "The maximum amount of ticks The Entity will lock onto a player for.\nDefault is 15 minute.",
+  "what-was-that.midnightconfig.ticksMinBother": "Minimum Bother Ticks",
+  "what-was-that.midnightconfig.ticksMinBother.tooltip": "The minimum amount of ticks The Entity will lock onto a player for.\nDefault is 1 minute.",
+  "what-was-that.midnightconfig.ticksPerAttempt": "Ticks Per Attempt",
+  "what-was-that.midnightconfig.ticksPerAttempt.tooltip": "Ticks until The Entity attempts an action or trys to lock onto a player.\nDefault is 5 seconds.",
+  "what-was-that.midnightconfig.title": "What Was That? Config",
+  "what-was-that.modrinth": "Modrinth",
+  "what-was-that.wiki": "Wiki"
 }
