--- a/src/main/resources/assets/what-was-that/lang/en_us.json
+++ b/src/main/resources/assets/what-was-that/lang/en_us.json
@@ -9,14 +9,18 @@
   "what-was-that.advancements.root.title": "Something is wrong...",
   "what-was-that.midnightconfig.": "",
   "what-was-that.midnightconfig..tooltip": "",
-  "what-was-that.midnightconfig.angerEnd": "In End Anger",
-  "what-was-that.midnightconfig.angerEnd.tooltip": "How much more likely The Entity is to take an action or lock onto people who have visited the end.",
-  "what-was-that.midnightconfig.angerInEnd": "End Travel Anger",
+  "what-was-that.midnightconfig.angerInEnd": "In End Anger",
   "what-was-that.midnightconfig.angerInEnd.tooltip": "How much more likely The Entity is to take an action or lock onto people who are in the end.",
   "what-was-that.midnightconfig.angerInNether": "In Nether Anger",
   "what-was-that.midnightconfig.angerInNether.tooltip": "How much more likely The Entity is to take an action or lock onto people who are in the nether.",
-  "what-was-that.midnightconfig.angerNether": "Nether Travel Anger",
-  "what-was-that.midnightconfig.angerNether.tooltip": "How much more likely The Entity is to take an action or lock onto people who have visited the nether.",
+  "what-was-that.midnightconfig.angerVisitedEnd": "Visited End Anger",
+  "what-was-that.midnightconfig.angerVisitedEnd.tooltip": "How much more likely The Entity is to take an action or lock onto people who have visited the end.",
+  "what-was-that.midnightconfig.angerVisitedNether": "Visited Nether Anger",
+  "what-was-that.midnightconfig.angerVisitedNether.tooltip": "How much more likely The Entity is to take an action or lock onto people who have visited the nether.",
+  "what-was-that.midnightconfig.chanceInCave": "Probability In Cave",
+  "what-was-that.midnightconfig.chanceInCave.tooltip": "The chance for The Entity to pick a player, when they are in a cave. 1/NUMBER",
+  "what-was-that.midnightconfig.chanceOutsideCave": "Probability Outside Cave",
+  "what-was-that.midnightconfig.chanceOutsideCave.tooltip": "The chance for The Entity to pick a player, when they are outside of a cave. 1/NUMBER",
   "what-was-that.midnightconfig.increasePerPlayer": "Increase Per Player",
   "what-was-that.midnightconfig.increasePerPlayer.tooltip": "How much to scale up the chance of picking a player when there are more players online.",
   "what-was-that.midnightconfig.textChances": "Probability",
