Entity gets madder when player has not slept

--- a/src/main/resources/assets/what-was-that/lang/en_us.json
+++ b/src/main/resources/assets/what-was-that/lang/en_us.json
@@ -21,6 +21,12 @@
   "what-was-that.midnightconfig.chanceInCave.tooltip": "The chance for The Entity to pick a player, when they are in a cave. 1/NUMBER",
   "what-was-that.midnightconfig.chanceOutsideCave": "Probability Outside Cave",
   "what-was-that.midnightconfig.chanceOutsideCave.tooltip": "The chance for The Entity to pick a player, when they are outside of a cave. 1/NUMBER",
+  "what-was-that.midnightconfig.increaseNoSleep14Days": "Increase After 14 Days No Sleep",
+  "what-was-that.midnightconfig.increaseNoSleep14Days.tooltip": "How much to scale up the chance of picking a player when the player has not slept in 14 days.",
+  "what-was-that.midnightconfig.increaseNoSleep3Days": "Increase After 3 Days No Sleep",
+  "what-was-that.midnightconfig.increaseNoSleep3Days.tooltip": "How much to scale up the chance of picking a player when the player has not slept in 3 days.",
+  "what-was-that.midnightconfig.increaseNoSleep7Days": "Increase After 7 Days No Sleep",
+  "what-was-that.midnightconfig.increaseNoSleep7Days.tooltip": "How much to scale up the chance of picking a player when the player has not slept in 7 days.",
   "what-was-that.midnightconfig.increasePerPlayer": "Increase Per Player",
   "what-was-that.midnightconfig.increasePerPlayer.tooltip": "How much to scale up the chance of picking a player when there are more players online.",
   "what-was-that.midnightconfig.textChances": "Probability",
